cloudformation/cloudformation-base.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Base network infrastructure for Ogata template'

Parameters:
  GithubRepository:
    Type: String

Resources:
  VPCTemplate:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: ogata-template-vpc

  PublicSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCTemplate
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ogata-public-subnet-1a

  PublicSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCTemplate
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.10.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ogata-public-subnet-1c

  PrivateSubnet1a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCTemplate
      AvailabilityZone: ap-northeast-1a
      CidrBlock: 10.0.20.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: ogata-private-subnet-1a

  PrivateSubnet1c:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPCTemplate
      AvailabilityZone: ap-northeast-1c
      CidrBlock: 10.0.30.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: ogata-private-subnet-1c

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ogata-igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPCTemplate
      InternetGatewayId: !Ref InternetGateway

  NatGatewayEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP.AllocationId
      SubnetId: !Ref PublicSubnet1a
      Tags:
        - Key: Name
          Value: ogata-nat-gw

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCTemplate
      Tags:
        - Key: Name
          Value: public-ogata-root-table

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1a
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1c
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPCTemplate
      Tags:
        - Key: Name
          Value: private-ogata-root-table

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateSubnet1aRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1a
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet1cRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1c
      RouteTableId: !Ref PrivateRouteTable

  GithubActionsRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: ogata-githubactions
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Federated: !Sub 'arn:aws:iam::${AWS::AccountId}:oidc-provider/token.actions.githubusercontent.com'
            Action: sts:AssumeRoleWithWebIdentity
            Condition:
              StringEquals:
                'token.actions.githubusercontent.com:sub': !Sub 'repo:Ogata-Kazuyoshi/${GithubRepository}:ref:refs/heads/main'
                'token.actions.githubusercontent.com:aud': 'sts.amazonaws.com'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryFullAccess
        - arn:aws:iam::aws:policy/AmazonECS_FullAccess
        - arn:aws:iam::aws:policy/AWSCloudFormationFullAccess
        - arn:aws:iam::aws:policy/AmazonS3FullAccess
      Policies:
        - PolicyName: ECRandECSAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                  - ecr:BatchCheckLayerAvailability
                  - ecr:GetDownloadUrlForLayer
                  - ecr:BatchGetImage
                  - ecr:InitiateLayerUpload
                  - ecr:UploadLayerPart
                  - ecr:CompleteLayerUpload
                  - ecr:PutImage
                  - ecs:RegisterTaskDefinition
                  - ecs:DescribeTaskDefinition
                  - ecs:UpdateService
                  - ecs:DescribeServices
                Resource: '*'
        - PolicyName: CloudFormationCustom
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - cloudformation:CreateChangeSet
                  - cloudformation:DescribeChangeSet
                  - cloudformation:ExecuteChangeSet
                  - cloudformation:DescribeStacks
                Resource: '*'
        - PolicyName: IAMRoleManagement
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - iam:CreateRole
                  - iam:PutRolePolicy
                  - iam:AttachRolePolicy
                  - iam:DetachRolePolicy
                Resource: '*'
        - PolicyName: TaggingOperations
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - tag:GetResources
                  - tag:TagResources
                  - tag:UntagResources
                Resource: '*'
        - PolicyName: LambdaCreateUpdatePolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - lambda:CreateFunction
                  - lambda:UpdateFunctionCode
                  - lambda:UpdateFunctionConfiguration
                  - lambda:GetFunction
                  - lambda:DeleteFunction
                  - lambda:TagResource # この行を追加
                  - lambda:UntagResource # この行も追加（将来的に必要になる可能性があります）
                  - lambda:AddPermission # この行を追加
                  - lambda:RemovePermission # この行も追加（将来的に必要になる可能性があります）
                Resource: !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:*'
              - Effect: Allow
                Action:
                  - iam:PassRole
                Resource: '*'
        - PolicyName: APIGatewayManagementPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - apigateway:GET
                  - apigateway:POST
                  - apigateway:PUT
                  - apigateway:DELETE
                  - apigateway:PATCH
                  - apigateway:UpdateRestApiPolicy # この行を追加
                Resource:
                  - !Sub 'arn:aws:apigateway:${AWS::Region}::/restapis'
                  - !Sub 'arn:aws:apigateway:${AWS::Region}::/restapis/*'

  LambdaExecutionRoleWithDynamoDB:
    Type: AWS::IAM::Role
    Properties:
      # RoleName: ogata-lambdaExecutionRole
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: DynamoDBAccess
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:CreateTable
                  - dynamodb:PutItem
                  - dynamodb:GetItem
                  - dynamodb:Scan
                Resource: !Sub 'arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/*'

Outputs:
  VpcId:
    Description: VPC ID
    Value: !Ref VPCTemplate
    Export:
      Name: OgataTemplateVpcId

  PublicSubnet1aId:
    Description: Public Subnet 1a ID
    Value: !Ref PublicSubnet1a
    Export:
      Name: PublicSubnet1aId

  PublicSubnet1cId:
    Description: Public Subnet 1c ID
    Value: !Ref PublicSubnet1c
    Export:
      Name: PublicSubnet1cId

  PrivateSubnet1aId:
    Description: Private Subnet 1a ID
    Value: !Ref PrivateSubnet1a
    Export:
      Name: PrivateSubnet1aId

  PrivateSubnet1cId:
    Description: Private Subnet 1c ID
    Value: !Ref PrivateSubnet1c
    Export:
      Name: PrivateSubnet1cId

  GithubActionsRoleArn:
    Description: ARN of the IAM Role for GitHub Actions
    Value: !GetAtt GithubActionsRole.Arn
    Export:
      Name: GithubActionsRoleArn
  LambdaExecutionRoleWithDynamoDBArn:
    Description: ARN of the IAM Role for lambda role
    Value: !GetAtt LambdaExecutionRoleWithDynamoDB.Arn
    Export:
      Name: LambdaExecutionRoleWithDynamoDBArn
